src/app/components/App.css
* {
  margin: 0;
}

@media (max-width: 420px) {

    body {
      background-color: lightgrey;
    }

    header {
      display: flex;
      justify-content: space-around;
      align-items: center;
      background-color: darkgreen;
    }

    header img {
      border-radius: 50%;
      height: 70px;
      margin: 5px;
    }

    .loginForm input {
      margin-top: 5px;
      font-size: 1.3em;
    }

    .dropDown {
      background-color: white;
      background-image: none;
      font-size: 1.3em;
    }

    .shift {
      font-size: 1.5em;
    }

    .home {
      text-align: center;
    }

    .hide {
      display: none;
    }

    .homeBtn {
      -webkit-border-radius: 5;
      -moz-border-radius: 5;
      border-radius: 5px;
      -webkit-box-shadow: 3px 3px 3px #666666;
      -moz-box-shadow: 3px 3px 3px #666666;
      box-shadow: 3px 3px 3px #666666;
      font-family: Arial;
      color: #000000;
      font-size: 20px;
      background: #5bd9d1;
      padding: 8px 15px 8px 15px;
      text-decoration: none;
    }

    .homeBtn:hover {
      background: #3cb0fd;
      text-decoration: none;
    }

    .navItem {
      background: #3444d9;
      background-image: -webkit-linear-gradient(top, #3444d9, #2baab8);
      background-image: -moz-linear-gradient(top, #3444d9, #2baab8);
      background-image: -ms-linear-gradient(top, #3444d9, #2baab8);
      background-image: -o-linear-gradient(top, #3444d9, #2baab8);
      background-image: linear-gradient(to bottom, #3444d9, #2baab8);
      -webkit-border-radius: 5;
      -moz-border-radius: 5;
      border-radius: 5px;
      font-family: Arial;
      color: #ffffff;
      font-size: 15px;
      padding: 10px 5px 10px 5px;
      margin: 5px 5px 5px 5px;
      text-decoration: none;
      width: 74px;
    }

    .navItem a {
      text-decoration: none;
      color: inherit;
    }

    .navItem:hover {
      background: #3cb0fd;
      background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
      background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
      background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
      background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
      text-decoration: none;
    }

    .manager {
      background-color: #888;
      font-family: Helvetica;
      padding-left: 10px;
      padding-top: 10px;
      margin-top: 20px;
    }

}

@media (min-width: 420px) {

  .welcome {
    font-size: 2em;
  }

  .loginForm input {
    margin-top: 5px;
    font-size: 1.3em;
  }

  body {
    background-color: darkslategrey;
    overflow: auto;
    color: #d9d9d9;
  }

  .home {
    position: absolute;
    margin-top: 120px;
    padding-left: 10px;
    text-align: center;
    width: 100%;
  }

  .bodyRoute {
    margin: 120px 10px 10px 10px;
    padding-left: 10px;
    position: absolute;
    background-color: #444;
    font-family: Helvetica, sans-serif;
  }

  .barShifts {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 400px;
  }

  .barShiftsEmp {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 250px;
  }

  .serverShifts {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 320px;
  }

  .serverShiftsEmp {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 200px;
  }

  .kitchenShifts {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 320px;
  }

  .kitchenShiftsEmp {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 200px;
  }

  .doorShifts {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 320px;
  }

  .doorShiftsEmp {
    display: flex;
    flex-flow: column wrap;
    min-width: 900px;
    height: 200px;
  }

  .hide {
    display: none;
  }

  .navBar {
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    margin-right: .5em;
    margin-bottom: 10px;
    width: 305px;
    height: 102px;
  }

  .navItem:nth-child(n + 4) {
    order: 1;
  }

  .navItem {
    background: #cccccc;
    background-image: -webkit-linear-gradient(top, #cccccc, #666666);
    background-image: -moz-linear-gradient(top, #cccccc, #666666);
    background-image: -ms-linear-gradient(top, #cccccc, #666666);
    background-image: -o-linear-gradient(top, #cccccc, #666666);
    background-image: linear-gradient(to bottom, #cccccc, #666666);
    -webkit-border-radius: 5;
    -moz-border-radius: 5;
    border-radius: 5px;
    font-family: Arial, sans-serif;;
    color: #000000;
    font-size: 15px;
    padding: 10px 5px 10px 5px;
    text-decoration: none;
    margin: 5px;
    min-width: 74px;
  }

  .navItem:hover {
    background: #888888;
    text-decoration: none;
  }

  .navBar a {
    text-decoration: none;
    color: #000;
  }

  header {
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: darkred;
    width: 100%;
    z-index: 1;
    height: 110px;
  }

  header img {
    border-radius: 50%;
    height: 80px;
    margin: 5px;
  }

  .homeBtn {
    background: #cccccc;
    background-image: -webkit-linear-gradient(top, #cccccc, #666666);
    background-image: -moz-linear-gradient(top, #cccccc, #666666);
    background-image: -ms-linear-gradient(top, #cccccc, #666666);
    background-image: -o-linear-gradient(top, #cccccc, #666666);
    background-image: linear-gradient(to bottom, #cccccc, #666666);
    -webkit-border-radius: 5;
    -moz-border-radius: 5;
    border-radius: 5px;
    -webkit-box-shadow: 3px 3px 3px #666666;
    -moz-box-shadow: 3px 3px 3px #666666;
    box-shadow: 3px 3px 3px #666666;
    font-family: Arial, sans-serif;;
    color: #000000;
    font-size: 15px;
    padding: 10px 5px 10px 5px;
    text-decoration: none;
    margin: 5px;
    min-width: 74px;
  }

  .homeBtn:hover {
    background: #888888;
    text-decoration: none;
  }

}

@media (min-width: 670px) {

  .home {
    text-align: left;
  }

  .navBar {
    display: inline-block;
    margin-right: .5em;
    width: auto;
    height: auto;
  }

  .navBar:after {
    content: '';
    width: 0%;
  }

  .navItem:nth-child(n + 4) {
    order: 1;
  }

}

